<resources>
    <string name="app_name">Training Diary</string>
    <string name="start_training">Start training</string>
    <string name="workout">Workout</string>
    <string name="weight">Weight</string>
    <string name="exercises">Exercises</string>
    <string name="profile">My profile</string>
    <string name="no_training">You have no current training</string>
    <string name="go_workout_list">Go workout list</string>
    <string name="new_workout">New Workout</string>
    <string name="current_workout">*</string>
    <string name="cancel">Cancel</string>
    <string name="workout_name">Enter workout name</string>
    <string name="new_profile">New Profile</string>
    <string name="profile_name">Enter Profile Name</string>
    <string name="save">Save</string>
    <string name="delete_profile_ask">Do you really want to delete this profile</string>
    <string name="delete_workout_ask">Do you really want to delete this workout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_delete_profile">This profile is active. Please active another
        profile</string>
    <string name="delete">Delete</string>
    <string name="enter_sets">Enter number of sets</string>
    <string name="enter_reps">Enter number of reps</string>
    <string name="day_name">Day %d</string>
    <string name="exercise">Exercise %d</string>
    <string name="current_weight">Current weight</string>
    <string name="max_weight">Max weight</string>
    <string name="number_sets">%d sets</string>
    <string name="number_reps">%d reps</string>
    <string name="last_weight">Last weight  %d</string>
    <string name="completed">completed</string>
    <string name="not_completed">not completed</string>
    <string name="new_exercise">New Exercise</string>
    <string name="enter_exercise_name">Enter Exercise Name</string>
    <string name="delete_exercise_ask">Do you really want to delete this exercise</string>
    <string name="weights">Weights</string>
    <string name="new_weight">New Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="delete_weight_ask">Do you really want to delete this weight</string>
    <string name="create_new">Create new</string>
    <string name="set">Set № %d</string>
    <string name="finish">Finish</string>
    <string name="statistic">Statistic</string>
    <integer name="com_vk_sdk_AppId">6902049</integer>
    <string name="no_weight">you have no weights</string>
    <string name="no_exercise">you have no exercises</string>
    <string name="empty_field">Please enter name</string>
    <string name="exercise_already_exists">This exercise already exists</string>
    <string name="weight_already_exists">This weight already exists</string>
    <string name="profile_already_exists">This profile already exists</string>
    <string name="workout_already_exists">This workout already exists</string>

</resources>
