<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.fisherman.trainingdiary.activity.view.Converter"/>

        <variable
            name="workoutDto"
            type="com.fisherman.trainingdiary.dto.WorkoutDTO"/>
        <variable
            name="currentSet"
            type="android.databinding.ObservableInt"/>

        <variable
            name="history"
            type="com.fisherman.trainingdiary.entity.History"/>
    </data>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_upper__training_trap"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            style="@style/training_text_style"
            android:text="@{workoutDto.exercise.name}"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/frame_background">

        <TextView
            android:layout_width="190dp"
            android:layout_height="match_parent"
            style="@style/training_text_style"
            android:text="@{@string/number_sets(workoutDto.numberSets)}"/>

        <TextView
            android:id="@+id/numberReps"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            style="@style/training_text_style"
            android:text="@{@string/number_reps(workoutDto.numberReps)}"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/frame_background">

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            style="@style/training_text_style"
            android:text="@{@string/last_weight(workoutDto.lastWeight)}"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            style="@style/training_text_style"
            android:text="@{workoutDto.lastMeasure.name}"/>

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            style="@style/training_text_style"
            android:text="@{workoutDto.lastComplete ? @string/completed : @string/not_completed}"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/frame_background">

        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/current_weight"
            style="@style/training_text_style"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            style="@style/training_text_style"
            android:inputType="number"
            android:text="@={Converter.convertLongToString(history.weight)}"
            tools:ignore="LabelFor" />

        <com.fisherman.trainingdiary.activity.view.adapter.autorefresh.AutoRefreshableSpinner
            android:id="@+id/weightSpinner"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            style="@style/no_frame_spinner_style"
            app:selection="@{workoutDto}"
            app:history="@{history}"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/frame_background">

            <com.rey.material.widget.RadioButton
                style="@style/material_radio_style"
                android:id="@+id/completeButton"
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/completedStatus"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                style="@style/training_text_style"
                android:text="@string/not_completed"/>

            <com.rey.material.widget.RadioButton
                style="@style/material_radio_style"
                android:id="@+id/notCompleteButton"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:checked="true" />


        <com.rey.material.widget.CheckBox
            android:id="@+id/max_weight"
            style="@style/material_checkbox_style"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/max_weight"
            android:textColorLink="@color/iconColor"
            android:checked="@={history.isMaxWeight}"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_lower__training_trap"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/setNumber"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            style="@style/training_text_style"
            android:text="@{@string/set(currentSet)}"/>

        <RelativeLayout android:id="@+id/setDialogMenu"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:background="@color/backgroundColor">


            <ImageView
                android:id="@+id/set_complete_button"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_rounded_ok"
                android:layout_alignParentStart="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/set_cancel_button"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_rounded_cancel"
                android:layout_alignParentEnd="true"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
</layout>